# rocketmq-apis

./: .asf.yaml  .bazelrc  .clang-format  .gitignore  BUILD.bazel  ChangeLog.md  NOTICE  README.md  StatusCode.md  StyleGuide.md  WORKSPACE  compile.bzl  deps.bzl  plugin.bzl  pom.xml  status_code.md
.github/workflows/: main.yml
apache/rocketmq/v1/: admin.proto  definition.proto  service.proto
apache/rocketmq/v2/: admin.proto  definition.proto  service.proto
cpp/: BUILD.bazel  cpp_grpc_compile.bzl  cpp_grpc_library.bzl
java/: BUILD.bazel  README.md  java_grpc_compile.bzl
src/main/java/apache/rocketmq/v1/: AckMessageRequest.java  AckMessageRequestOrBuilder.java  AckMessageResponse.java  Address.java  AdminGrpc.java  Assignment.java  Broker.java  ChangeInvisibleDurationRequest.java  ChangeInvisibleDurationRequestOrBuilder.java  ChangeInvisibleDurationResponse.java  ChangeInvisibleDurationResponseOrBuilder.java  ChangeLogLevelRequest.java  ChangeLogLevelResponse.java  ConsumerData.java  DeadLetterPolicy.java  Digest.java  EndTransactionRequest.java  EndTransactionResponse.java  Endpoints.java  FilterExpression.java  ForwardMessageToDeadLetterQueueRequest.java  ForwardMessageToDeadLetterQueueResponse.java  HealthCheckRequest.java  HealthCheckResponse.java  HeartbeatRequest.java  HeartbeatResponse.java  MQAdmin.java  MQDomain.java  MQService.java  Message.java  MessageOrBuilder.java  MessagingServiceGrpc.java  NackMessageRequest.java  NackMessageResponse.java  NoopCommand.java  NotifyClientTerminationRequest.java  NotifyClientTerminationResponse.java  Partition.java  PartitionOrBuilder.java  PollCommandRequest.java  (+26 more)
src/main/java/apache/rocketmq/v2/: AckMessageEntry.java  AckMessageEntryOrBuilder.java  AckMessageRequest.java  AckMessageRequestOrBuilder.java  AckMessageResponse.java  AckMessageResponseOrBuilder.java  AckMessageResultEntry.java  AckMessageResultEntryOrBuilder.java  ActivePublishingSettings.java  ActivePublishingSettingsOrBuilder.java  ActiveSubscriptionSettings.java  ActiveSubscriptionSettingsOrBuilder.java  Address.java  AddressOrBuilder.java  AddressScheme.java  AdminGrpc.java  ApplyPassiveSettingsCommand.java  ApplyPassiveSettingsCommandOrBuilder.java  ApplyPassiveSettingsResult.java  ApplyPassiveSettingsResultOrBuilder.java  Assignment.java  AssignmentOrBuilder.java  Authentication.java  AuthenticationMethod.java  AuthenticationOrBuilder.java  Broker.java  BrokerOrBuilder.java  CacheLimits.java  CacheLimitsOrBuilder.java  ChangeInvisibleDurationRequest.java  ChangeInvisibleDurationRequestOrBuilder.java  ChangeInvisibleDurationResponse.java  ChangeInvisibleDurationResponseOrBuilder.java  ChangeLogLevelRequest.java  ChangeLogLevelRequestOrBuilder.java  ChangeLogLevelResponse.java  ChangeLogLevelResponseOrBuilder.java  ClientOverwrittenSettings.java  ClientOverwrittenSettingsOrBuilder.java  ClientSettings.java  (+143 more)
src/main/resources/proto/apache/rocketmq/v1/: admin.proto
src/main/resources/proto/apache/rocketmq/v2/: definition.proto  service.proto
