package(default_visibility = ["//visibility:public"])

proto_library(
    name = "rocketmq_v1_proto",
    srcs = glob(["apache/rocketmq/v1/*.proto"]),
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_googleapis//google/rpc:code_proto",
        "@com_google_googleapis//google/rpc:error_details_proto",
        "@com_google_googleapis//google/rpc:status_proto",
    ]
)



