load("//:plugin.bzl", "proto_plugin")
load(":cpp_grpc_library.bzl", "cpp_grpc_library")

proto_plugin(
    name = "cpp",
    outputs = [
        "{basename}.pb.h",
        "{basename}.pb.cc",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_cpp",
    options = [
        "generate_mock_code=true",
    ],
    outputs = [
        "{basename}.grpc.pb.h",
        "{basename}.grpc.pb.cc",
        "{basename}_mock.grpc.pb.h",
    ],
    tool = "@com_github_grpc_grpc//src/compiler:grpc_cpp_plugin",
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "rocketmq-proto-cpp-library",
    deps = ["//:rocketmq_v1_proto"]
)