# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:plugin.bzl", "proto_plugin")
load(":cpp_grpc_library.bzl", "cpp_grpc_library")

proto_plugin(
    name = "cpp",
    outputs = [
        "{basename}.pb.h",
        "{basename}.pb.cc",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_cpp",
    options = [
        "generate_mock_code=true",
    ],
    outputs = [
        "{basename}.grpc.pb.h",
        "{basename}.grpc.pb.cc",
        "{basename}_mock.grpc.pb.h",
    ],
    tool = "@com_github_grpc_grpc//src/compiler:grpc_cpp_plugin",
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "rocketmq-proto-cpp-library",
    deps = ["//:rocketmq_v2_proto"]
)